Expose Prometheus metrics port 8889

--- a/compose.yaml
+++ b/compose.yaml
@@ -15,6 +15,7 @@ services:
       - "4317:4317"   # OTLP gRPC
       - "4318:4318"   # OTLP HTTP
       - "8888:8888"   # Prometheus metrics (collector self)
+      - "8889:8889"   # Prometheus metrics (exported from OpenClaw)
     depends_on:
       - elasticsearch
     restart: unless-stopped
