--- a/logstash/pipeline/openclaw.conf
+++ b/logstash/pipeline/openclaw.conf
@@ -1,77 +1,47 @@
 # Logstash Pipeline for OpenClaw File Logs
-# Optional: Use this to ingest existing file logs into Elasticsearch
 
 input {
   file {
-    path => "/var/log/openclaw/*.log"
+    path => "/var/log/openclaw/openclaw-*.log"
     start_position => "beginning"
-    sincedb_path => "/dev/null"
-    codec => json_lines
+    sincedb_path => "/tmp/logstash-sincedb"
+    mode => "read"
+    file_chunk_size => 1048576
+    stat_interval => 1
+    discover_interval => 5
+    codec => "json_lines"
   }
 }
 
 filter {
-  # Parse the JSON log entry
-  if [msg] {
-    mutate {
-      rename => { "msg" => "message" }
-    }
-  }
-
   # Extract timestamp
   if [time] {
     date {
       match => ["time", "ISO8601"]
       target => "@timestamp"
     }
+  }
+
+  # Extract log level from _meta
+  if [_meta][logLevelName] {
     mutate {
-      remove_field => ["time"]
+      add_field => { "level" => "%{[_meta][logLevelName]}" }
     }
   }
 
-  # Map log levels
-  if [level] {
-    translate {
-      field => "level"
-      destination => "log_level"
-      dictionary => {
-        "10" => "trace"
-        "20" => "debug"
-        "30" => "info"
-        "40" => "warn"
-        "50" => "error"
-        "60" => "fatal"
-      }
-      fallback => "unknown"
-    }
-  }
-
-  # Extract subsystem from name field
-  if [name] {
-    mutate {
-      add_field => { "subsystem" => "%{name}" }
-    }
-  }
-
-  # Parse session info if present
-  if [sessionKey] {
-    mutate {
-      add_field => { "session.key" => "%{sessionKey}" }
-    }
-  }
-
-  # Add source identifier
+  # Flatten for easier searching
   mutate {
-    add_field => { "source" => "openclaw-gateway" }
+    rename => { "0" => "subsystem" }
+    rename => { "1" => "message" }
+    remove_field => ["time", "@version", "event"]
   }
 }
 
 output {
   elasticsearch {
     hosts => ["http://elasticsearch:9200"]
-    index => "openclaw-filelogs-%{+YYYY.MM.dd}"
+    index => "openclaw-logs-%{+YYYY.MM.dd}"
   }
-
-  # Debug output (remove in production)
-  # stdout { codec => rubydebug }
+  
+  stdout { codec => dots }
 }
