--- a/grafana/provisioning/datasources/datasources.yaml
+++ b/grafana/provisioning/datasources/datasources.yaml
@@ -5,6 +5,7 @@ apiVersion: 1
 datasources:
   # Elasticsearch - OpenClaw Logs
   - name: Elasticsearch-Logs
+    uid: Elasticsearch-Logs
     type: elasticsearch
     access: proxy
     url: http://elasticsearch:9200
@@ -19,6 +20,7 @@ datasources:
 
   # Elasticsearch - OTel Traces
   - name: Elasticsearch-Traces
+    uid: Elasticsearch-Traces
     type: elasticsearch
     access: proxy
     url: http://elasticsearch:9200
@@ -30,6 +32,7 @@ datasources:
 
   # Prometheus metrics from OTel Collector
   - name: Prometheus
+    uid: Prometheus
     type: prometheus
     access: proxy
     url: http://otel-collector:8889
